# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

pkgdatadir = $(datadir)/games/@PACKAGE@/data

# pkgdata_DATA = pingus.dat global.dat menu.dat editor.dat fonts.dat traps.dat game.dat textures.dat story.dat
EXTRA_DIST   = pingus.scr global.scr menu.scr editor.scr fonts.scr traps.scr game.scr textures.scr story.scr
pkgdata_DATA = $(EXTRA_DIST)
# CLEANFILES   = $(pkgdata_DATA)

# pingus.dat : pingus.scr
# 	../../src/pingus -datafile $< $@

# global.dat : global.scr
# 	../../src/pingus -datafile $< $@

# menu.dat : menu.scr
# 	../../src/pingus -datafile $< $@

# editor.dat : editor.scr
# 	../../src/pingus -datafile $< $@

# fonts.dat : fonts.scr
# 	../../src/pingus -datafile $< $@

# game.dat : game.scr
# 	../../src/pingus -datafile $< $@

# traps.dat : traps.scr
# 	../../src/pingus -datafile $< $@

# textures.dat : textures.scr
# 	../../src/pingus -datafile $< $@

# story.dat : story.scr
# 	../../src/pingus -datafile $< $@

## EOF ##
